--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -62,6 +62,19 @@ html, body {
   background-color: #177571;
 }
 
+.flex-parent {
+  display: flex;
+  padding: 45px 0 30px 0;
+}
+
+.jc-center {
+  justify-content: center;
+}
+
+button.margin-right {
+  margin-right: 20px;
+}
+
 .submitbtn {
   border: 2px solid rgba(0, 0, 0, .07);
   border-radius: 8px;
@@ -76,7 +89,6 @@ html, body {
   margin-top: 30px;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
-  margin-left:130%;
 }
 
 .submitbtn:hover, .dropbtn:focus {
@@ -99,8 +111,6 @@ html, body {
   margin-top: 30px;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
-  margin-left:100%;
-  margin-right: 130%;
 }
 
 .nextbtn:hover, .dropbtn:focus {
@@ -679,22 +689,24 @@ input:checked + .slider:before {
   -ms-flex-align: center;
    align-items: center;
   height: 35vh;
-  text-align: center;
   position: relative;
   /* margin: 77px 12px 0 12px; */
+  padding-left:150px;
+  padding-right: 150px;
 }
 
 .profile-wrapper {
   background: url('../images/profile.png');
   background-size: 300px;
-  border: 5px solid #fff;
+  border: 4px solid #fff;
   box-shadow: 0px 0px 11px rgba(33, 33, 33, 0.301); 
-  background-position: center center;
-  width: 250px;
+  background-position: center;
+  width: 230px;
   height:30vh;
-  border-radius: 200px;
-  margin-top: 250px;
-  margin-left: 350px;
+  border-radius: 50%;
+  top: 50%;
+  transform: translate(0%, -50%);
+  margin: auto;
 }
 
 /*---------------------------------------
@@ -702,29 +714,30 @@ input:checked + .slider:before {
 -----------------------------------------*/
 
 #profile_detail {
-  padding-top: 20px;
   background-color: white;
-  height: 30vh;
+  text-align: center;
 }
 
-#profile_detail .profile_detail-thumb {
-  border-radius: 5px;
-  margin-left: -380px;
-  text-align: center;
-  margin-top: 100px;
+#profile_detail h2{
+  margin-top: -90px;
 }
+
 
 /*---------------------------------------
   Profile Detail 2 section              
 -----------------------------------------*/
 #prof {
   background-color: #f8f8f8;
+  padding-left:150px;
+  padding-right: 150px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .profile2 {
   position: relative;
-  width: 100%;
-  padding: 45px 0 15px 0;
+  padding-left:150px;
+  padding-right: 150px;
 }
 
 .profile2 .profile2-item {
@@ -952,13 +965,15 @@ input:checked + .slider:before {
   background-color: #f5f5f5;
   padding-left:150px;
   padding-right: 150px;
+  padding-bottom: 50px;
+  padding-top: 50px;
 }
 
 
 .service {
   position: relative;
   width: 100%;
-  padding: 45px 0 15px 0;
+  padding: 5px 0 15px 0;
 }
 
 .service .service-item {
@@ -1103,6 +1118,12 @@ input:checked + .slider:before {
   color: #ffffff;
 }
 
+#contact .col-md-12 img {
+  border-radius: 5px;
+  margin-bottom: 28px;
+  width: 400px;
+  height:300px;
+}
 
 /*---------------------------------------
   Footer section              
