--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -60,6 +60,7 @@ html, body {
 
 .loginbtn:hover, .dropbtn:focus {
   background-color: #177571;
+  color: #ffffff;
 }
 
 .flex-parent {
@@ -117,13 +118,52 @@ button.margin-right {
   background-color: #177571;
 }
 
+.signInbtn{
+  background-color: 	#2AC7BE;
+  border: none;
+  border-radius: 8px;
+  color: #ffffff;
+  font-weight: bold;
+  height: 50px;
+  width: 200px;
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 10px;
+  -webkit-transition: all ease-in-out 0.4s;
+  transition: all ease-in-out 0.4s;
+}
+
+.signInbtn:hover, .dropbtn:focus {
+  background-color: #000000;
+}
+
+.signOutbtn{
+  background-color: 	#000000;
+  border: none;
+  border-radius: 8px;
+  color: #ffffff;
+  font-weight: bold;
+  height: 50px;
+  width: 200px;
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 30px;
+  -webkit-transition: all ease-in-out 0.4s;
+  transition: all ease-in-out 0.4s;
+}
+
+.signOutbtn:hover, .dropbtn:focus {
+  background-color: #2AC7BE;
+}
 /*---------------------------------------
   Image              
 -----------------------------------------*/
 
 .img-survey {
-  width: 290px;
-  height: 200px;
+  width: 500px;
+  height: 400px;
   margin-bottom: 30px;
   margin-top: 30px;
 }
@@ -137,7 +177,6 @@ button.margin-right {
   height: 20px;
   width: 20px;
   top: 20px; 
-
  }
 
  ul {
@@ -148,7 +187,11 @@ li {
   display: inline-block;
 }
 
-input[type="checkbox"][id^="cb"] {
+input[type="checkbox"][id^=""] {
+  display: none;
+}
+
+.hidden{
   display: none;
 }
 
@@ -697,6 +740,7 @@ input:checked + .slider:before {
 
 .profile-wrapper {
   background: url('../images/profile.png');
+  background-color: white;
   background-size: 300px;
   border: 4px solid #fff;
   box-shadow: 0px 0px 11px rgba(33, 33, 33, 0.301); 
@@ -734,6 +778,9 @@ input:checked + .slider:before {
   padding-bottom: 30px;
 }
 
+#prof h2{
+  transform: translate(40%, 0%);
+}
 .profile2 {
   position: relative;
   padding-left:150px;
@@ -749,6 +796,7 @@ input:checked + .slider:before {
   padding: 30px;
   border-radius: 5px;
   transition: box-shadow .3s;
+  transform: translate(50%, 0%);
 }
 
 .profile2 .profile2-item:hover {
